src/OpenCvSharpExtern/aruco.h

	struct aruco_DetectorParameters
	{
		int adaptiveThreshWinSizeMin;
		int adaptiveThreshWinSizeMax;
		int adaptiveThreshWinSizeStep;
		double adaptiveThreshConstant;
		double minMarkerPerimeterRate;
		double maxMarkerPerimeterRate;
		double polygonalApproxAccuracyRate;
		double minCornerDistanceRate;
		int minDistanceToBorder;
		double minMarkerDistanceRate;
		float minGroupDistance;
		int cornerRefinementMethod;
		int cornerRefinementWinSize;
		float relativeCornerRefinmentWinSize;
		int cornerRefinementMaxIterations;
		double cornerRefinementMinAccuracy;
		int markerBorderBits;
		int perspectiveRemovePixelPerCell;
		double perspectiveRemoveIgnoredMarginPerCell;
		double maxErroneousBitsInBorderRate;
		double minOtsuStdDev;
		double errorCorrectionRate;
		float aprilTagQuadDecimate;
		float aprilTagQuadSigma;
		int aprilTagMinClusterPixels;
		int aprilTagMaxNmaxima;
		float aprilTagCriticalRad;
		float aprilTagMaxLineFitMse;
		int aprilTagMinWhiteBlackDiff;
		int aprilTagDeglitch;
		bool detectInvertedMarker;
		bool useAruco3Detection;
		int minSideLengthCanonicalImg;
		float minMarkerLengthRatioOriginalImg;
	};
	struct aruco_RefineParameters
	{
		float minRepDistance;
		float errorCorrectionRate;
		bool checkAllOrders;
	};
CVAPI(ExceptionStatus) aruco_Dictionary_new_default(cv::aruco::Dictionary** returnValue)
{
	return cvTry([&] {
		*returnValue = new cv::aruco::Dictionary();
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_new(
	cv::Mat* bytesList, int markerSize, int maxCorrectionBits, cv::aruco::Dictionary** returnValue)
{
	return cvTry([&] {
		*returnValue = new cv::aruco::Dictionary(*bytesList, markerSize, maxCorrectionBits);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_delete(cv::aruco::Dictionary* ptr)
{
	return cvTry([&] {
		delete ptr;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_readDictionary(cv::aruco::Dictionary* obj, cv::FileNode* fn, int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->readDictionary(*fn) ? 1 : 0;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_writeDictionary(cv::aruco::Dictionary* obj, cv::FileStorage* fs, const char* name)
{
	return cvTry([&] {
		obj->writeDictionary(*fs, cv::String(name));
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_setMarkerSize(cv::aruco::Dictionary* obj, int value)
{
	return cvTry([&] {
		obj->markerSize = value;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_setMaxCorrectionBits(cv::aruco::Dictionary* obj, int value)
{
	return cvTry([&] {
		obj->maxCorrectionBits = value;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getBytesList(cv::aruco::Dictionary* obj, cv::Mat** returnValue)
{
	return cvTry([&] {
		* returnValue = new cv::Mat(obj->bytesList);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getMarkerSize(cv::aruco::Dictionary* obj, int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->markerSize;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getMaxCorrectionBits(cv::aruco::Dictionary* obj, int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->maxCorrectionBits;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_identify(
	cv::aruco::Dictionary* obj,
	cv::Mat *onlyBits,
	int *idx,
	int *rotation,
	double maxCorrectionRate,
	int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->identify(*onlyBits, *idx, *rotation, maxCorrectionRate) != 0;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_identify_withThreshold(
	const cv::aruco::Dictionary* obj,
	cv::Mat *onlyCellPixelRatio,
	int *idx,
	int *rotation,
	double maxCorrectionRate,
	float validBitIdThreshold,
	int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->identify(*onlyCellPixelRatio, *idx, *rotation, maxCorrectionRate, validBitIdThreshold) ? 1 : 0;
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getDistanceToId(
	cv::aruco::Dictionary* obj,
	const interop::InputArrayProxy* bits,
	int id,
	int allRotations,
	int* returnValue)
{
	return cvTry([&] {
		*returnValue = obj->getDistanceToId(InProxy(*bits), id, allRotations != 0);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_generateImageMarker(
	cv::aruco::Dictionary* obj,
	int id,
	int sidePixels,
	const interop::OutputArrayProxy* img,
	int borderBits)
{
	return cvTry([&] {
		obj->generateImageMarker(id, sidePixels, OutProxy(*img), borderBits);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getByteListFromBits(
	cv::Mat *bits,
	cv::Mat* returnValue)
{
	return cvTry([&] {
		const auto result = cv::aruco::Dictionary::getByteListFromBits(*bits);
		result.copyTo(*returnValue);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getBitsFromByteList(
	cv::Mat *byteList,
	int markerSize,
	int rotationId,
	cv::Mat* returnValue)
{
	return cvTry([&] {
		const auto result = cv::aruco::Dictionary::getBitsFromByteList(*byteList, markerSize, rotationId);
		result.copyTo(*returnValue);
	});
}
CVAPI(ExceptionStatus) aruco_Dictionary_getMarkerBits(
	const cv::aruco::Dictionary* obj,
	int markerId,
	int rotationId,
	cv::Mat* returnValue)
{
	return cvTry([&] {
		const auto result = obj->getMarkerBits(markerId, rotationId);
		result.copyTo(*returnValue);
	});
}
CVAPI(ExceptionStatus) aruco_CharucoDetector_setCharucoParameters(
	cv::aruco::CharucoDetector* detector,
	const interop::InputArrayProxy* cameraMatrix, const interop::InputArrayProxy* distCoeffs,
	int minMarkers, int tryRefineMarkers, int checkMarkers)
{
	return cvTry([&] {
		cv::aruco::CharucoParameters cp;
		cv::Scalar cameraMatrixScratch, distCoeffsScratch;
		const cv::_InputArray cameraMatrixArr = fromInputProxy(*cameraMatrix, cameraMatrixScratch);
		const cv::_InputArray distCoeffsArr = fromInputProxy(*distCoeffs, distCoeffsScratch);
		if (!cameraMatrixArr.empty())
			cp.cameraMatrix = cameraMatrixArr.getMat();
		if (!distCoeffsArr.empty())
			cp.distCoeffs = distCoeffsArr.getMat();
		cp.minMarkers = minMarkers;
		cp.tryRefineMarkers = tryRefineMarkers != 0;
		cp.checkMarkers = checkMarkers != 0;
		detector->setCharucoParameters(cp);
	});
}
CVAPI(ExceptionStatus) aruco_CharucoDetector_getDetectorParameters(const cv::aruco::CharucoDetector* detector, aruco_DetectorParameters* returnValue)
{
	return cvTry([&] {
		*returnValue = c(detector->getDetectorParameters());
	});
}
CVAPI(ExceptionStatus) aruco_CharucoDetector_setDetectorParameters(cv::aruco::CharucoDetector* detector, aruco_DetectorParameters* detectorParameters)
{
	return cvTry([&] {
		detector->setDetectorParameters(cpp(*detectorParameters));
	});
}
CVAPI(ExceptionStatus) aruco_CharucoDetector_getRefineParameters(const cv::aruco::CharucoDetector* detector, aruco_RefineParameters* returnValue)
{
	return cvTry([&] {
		*returnValue = c(detector->getRefineParameters());
	});
}
CVAPI(ExceptionStatus) aruco_CharucoDetector_setRefineParameters(cv::aruco::CharucoDetector* detector, aruco_RefineParameters* refineParameters)
{
	return cvTry([&] {
		const auto rp = cpp(*refineParameters);
		detector->setRefineParameters(rp);
	});
}
// ==================== Board ====================

CVAPI(ExceptionStatus) aruco_Board_create(
	cv::Point3f** objPoints, int objPointsSize1, int* objPointsSize2,
	cv::aruco::Dictionary* dictionary,
	std::vector<int>* ids,
	cv::aruco::Board** returnValue)
{
	return cvTry([&] {
		std::vector<std::vector<cv::Point3f>> objPointsVec(objPointsSize1);
		for (int i = 0; i < objPointsSize1; i++)
		{
			if (objPointsSize2[i] != 4)
				CV_Error(cv::Error::StsBadArg, "Each marker must have exactly 4 corners");
			objPointsVec[i] = std::vector<cv::Point3f>(objPoints[i], objPoints[i] + objPointsSize2[i]);
		}
		*returnValue = new cv::aruco::Board(objPointsVec, *dictionary, *ids);
	});
}
CVAPI(ExceptionStatus) aruco_Board_delete(cv::aruco::Board* ptr)
{
	return cvTry([&] {
		delete ptr;
	});
}
CVAPI(ExceptionStatus) aruco_Board_getDictionary(const cv::aruco::Board* ptr, cv::aruco::Dictionary** returnValue)
{
	return cvTry([&] {
		*returnValue = new cv::aruco::Dictionary(ptr->getDictionary());
	});
}
CVAPI(ExceptionStatus) aruco_Board_getObjPoints(const cv::aruco::Board* ptr, std::vector<cv::Point3f>* returnValue)
{
	return cvTry([&] {
		returnValue->clear();
		for (const auto& marker : ptr->getObjPoints())
			for (const auto& p : marker)
				returnValue->push_back(p);
	});
}
CVAPI(ExceptionStatus) aruco_Board_getIds(const cv::aruco::Board* ptr, std::vector<int>* returnValue)
{
	return cvTry([&] {
		*returnValue = ptr->getIds();
	});
}
CVAPI(ExceptionStatus) aruco_Board_getRightBottomCorner(const cv::aruco::Board* ptr, interop::Point3f* returnValue)
{
	return cvTry([&] {
		*returnValue = c(ptr->getRightBottomCorner());
	});
}
CVAPI(ExceptionStatus) aruco_Board_matchImagePoints(
	const cv::aruco::Board* ptr,
	cv::Point2f** detectedCorners, int detectedCornersSize1, int* detectedCornersSize2,
	const interop::InputArrayProxy* detectedIds,
	const interop::OutputArrayProxy* objPoints,
	const interop::OutputArrayProxy* imgPoints)
{
	return cvTry([&] {
		std::vector<std::vector<cv::Point2f>> cornersVec(detectedCornersSize1);
		for (int i = 0; i < detectedCornersSize1; i++)
			cornersVec[i] = std::vector<cv::Point2f>(detectedCorners[i], detectedCorners[i] + detectedCornersSize2[i]);
		ptr->matchImagePoints(cornersVec, InProxy(*detectedIds), OutProxy(*objPoints), OutProxy(*imgPoints));
	});
}
// For cv::CharucoBoard, matchImagePoints() expects a flat vector<Point2f> of ChArUco corners
// (not a jagged per-marker array like Board/GridBoard).
CVAPI(ExceptionStatus) aruco_Board_matchImagePoints_flat(
	const cv::aruco::Board* ptr,
	std::vector<cv::Point2f>* detectedCorners,
	const interop::InputArrayProxy* detectedIds,
	const interop::OutputArrayProxy* objPoints,
	const interop::OutputArrayProxy* imgPoints)
{
	return cvTry([&] {
		ptr->matchImagePoints(*detectedCorners, InProxy(*detectedIds), OutProxy(*objPoints), OutProxy(*imgPoints));
	});
}
CVAPI(ExceptionStatus) aruco_Board_generateImage(
	const cv::aruco::Board* ptr,
	interop::Size outSize,
	const interop::OutputArrayProxy* img,
	int marginSize,
	int borderBits)
{
	return cvTry([&] {
		ptr->generateImage(cpp(outSize), OutProxy(*img), marginSize, borderBits);
	});
}
// ==================== GridBoard ====================

CVAPI(ExceptionStatus) aruco_GridBoard_create(
	interop::Size size,
	float markerLength,
	float markerSeparation,
	cv::aruco::Dictionary* dictionary,
	std::vector<int>* ids,
	cv::aruco::GridBoard** returnValue)
{
	return cvTry([&] {
		*returnValue = new cv::aruco::GridBoard(cpp(size), markerLength, markerSeparation, *dictionary, *ids);
	});
}
CVAPI(ExceptionStatus) aruco_GridBoard_delete(cv::aruco::GridBoard* ptr)
{
	return cvTry([&] {
		delete ptr;
	});
}
CVAPI(ExceptionStatus) aruco_GridBoard_getGridSize(const cv::aruco::GridBoard* ptr, interop::Size* returnValue)
{
	return cvTry([&] {
		*returnValue = c(ptr->getGridSize());
	});
}
CVAPI(ExceptionStatus) aruco_GridBoard_getMarkerLength(const cv::aruco::GridBoard* ptr, float* returnValue)
{
	return cvTry([&] {
		*returnValue = ptr->getMarkerLength();
	});
}
CVAPI(ExceptionStatus) aruco_GridBoard_getMarkerSeparation(const cv::aruco::GridBoard* ptr, float* returnValue)
{
	return cvTry([&] {
		*returnValue = ptr->getMarkerSeparation();
	});
}