src/OpenCvSharp/Internal/PInvoke/NativeMethods/NativeMethods_aruco.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_CharucoDetector_setCharucoParameters(
        OpenCvSafeHandle detector,
        in InputArrayProxy cameraMatrix, in InputArrayProxy distCoeffs,
        int minMarkers, int tryRefineMarkers, int checkMarkers);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_CharucoDetector_getDetectorParameters(OpenCvSafeHandle detector, out DetectorParameters returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_CharucoDetector_setDetectorParameters(OpenCvSafeHandle detector, ref DetectorParameters detectorParameters);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_CharucoDetector_getRefineParameters(OpenCvSafeHandle detector, out RefineParameters returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_CharucoDetector_setRefineParameters(OpenCvSafeHandle detector, ref RefineParameters refineParameters);

    #endregion

    #region Dictionary

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_new_default(out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_new(IntPtr bytesList, int markerSize, int maxCorrectionBits, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_delete(IntPtr ptr);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_readDictionary(OpenCvSafeHandle obj, IntPtr fn, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_writeDictionary(
        OpenCvSafeHandle obj, IntPtr fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_setMarkerSize(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_setMaxCorrectionBits(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getBytesList(OpenCvSafeHandle obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getMarkerSize(OpenCvSafeHandle obj, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getMaxCorrectionBits(OpenCvSafeHandle obj, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_identify(
        OpenCvSafeHandle obj,
        IntPtr onlyBits,
        out int idx,
        out int rotation,
        double maxCorrectionRate,
        out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_identify_withThreshold(
        OpenCvSafeHandle obj,
        IntPtr onlyCellPixelRatio,
        out int idx,
        out int rotation,
        double maxCorrectionRate,
        float validBitIdThreshold,
        out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Dictionary_getDistanceToId(
        OpenCvSafeHandle obj,
        in InputArrayProxy bits,
        int id,
        int allRotations,
        out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Dictionary_generateImageMarker(
        OpenCvSafeHandle obj,
        int id,
        int sidePixels,
        in OutputArrayProxy img,
        int borderBits);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getByteListFromBits(
        IntPtr bits,
        IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getBitsFromByteList(
        IntPtr byteList,
        int markerSize,
        int rotationId,
        IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Dictionary_getMarkerBits(
        OpenCvSafeHandle obj,
        int markerId,
        int rotationId,
        IntPtr returnValue);

    #endregion

    #region Board

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Board_create(
        [MarshalAs(UnmanagedType.LPArray)] IntPtr[] objPoints, int objPointsSize1, int[] objPointsSize2,
        IntPtr dictionary, IntPtr ids, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Board_delete(IntPtr ptr);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Board_getDictionary(OpenCvSafeHandle ptr, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Board_getObjPoints(OpenCvSafeHandle ptr, IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Board_getIds(OpenCvSafeHandle ptr, IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_Board_getRightBottomCorner(OpenCvSafeHandle ptr, out Point3f returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Board_matchImagePoints(
        OpenCvSafeHandle ptr,
        [MarshalAs(UnmanagedType.LPArray)] IntPtr[] detectedCorners, int detectedCornersSize1, int[] detectedCornersSize2,
        in InputArrayProxy detectedIds, in OutputArrayProxy objPoints, in OutputArrayProxy imgPoints);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Board_matchImagePoints_flat(
        OpenCvSafeHandle ptr, IntPtr detectedCorners,
        in InputArrayProxy detectedIds, in OutputArrayProxy objPoints, in OutputArrayProxy imgPoints);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus aruco_Board_generateImage(
        OpenCvSafeHandle ptr, Size outSize, in OutputArrayProxy img, int marginSize, int borderBits);

    #endregion

    #region GridBoard

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_GridBoard_create(
        Size size, float markerLength, float markerSeparation, IntPtr dictionary, IntPtr ids, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_GridBoard_delete(IntPtr ptr);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_GridBoard_getGridSize(OpenCvSafeHandle ptr, out Size returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_GridBoard_getMarkerLength(OpenCvSafeHandle ptr, out float returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus aruco_GridBoard_getMarkerSeparation(OpenCvSafeHandle ptr, out float returnValue);

    #endregion
}
